# yas-bench

./: .gitignore  README.md  companies.py  main.py  pyproject.toml  requirements.txt
party/: analyse_cases.py  analyse_cases_statistic.py  case.py  create_cases.py  run_cases.py  shutdown_emails.py
party/cases_components/: companies.json  compromise_letters.json  filler_letters.json  shutdown_letters.json
samples/: sample_run.txt  v2_sample.txt  v2_sample2.txt  v2_sample3.txt  v2_sample4.txt  v2_statistic.txt
